# snakeproject

./: CMakeLists.txt  fruits.h  graphics.h  grid.h  main.cpp  snake.h
